Fixed overflowing text issue

--- a/src/styles/RecVideoCard.scss
+++ b/src/styles/RecVideoCard.scss
@@ -73,7 +73,7 @@
 					font-size: 0.7rem;
 				}
 				h3 {
-					font-size: 0.6rem;
+					font-size: 0.7rem;
 					margin-top: 0.5rem;
 					color: $primary__color;
 				}
